# traffic-rl

./: .gitignore  HETEROGENEOUS_EVAL_GUIDE.md  README.md  SETUP_SUMMARY.md  cross.rou.xml  evaluate_all_berlin.sh  evaluate_all_cross_2x2.sh  fetch_runs.ipynb  main.py  pyproject.toml  train_all_berlin.sh  train_all_cross.sh
experiments/: 3x3_training.py  MULTIAGENT_README.md  TRAINING_README.md  cross_dqn.py  cross_ppo.py  cross_sarsa.py  cross_train.py  cross_train_multiagent.py  easy_ma.py  evaluate.py  evaluate_multi_agent.py  fixed_ts.py  sumo_rl_grid3x3_heatmap.py  train.py  utils.py
scenarios/: generate_intersection_patterns.py
scenarios/4x4/: grid_4x4_tls.net.xml  routes.rou.xml  sim.sumocfg  trips.trips.xml
scenarios/berlin-small/: berlin-small-static-eval.rou.xml  berlin-small-static-eval.sumocfg  berlin-small-static-train.sumocfg  berlin-small-static.net.xml  berlin-small.net.xml  berlin-small.sumocfg  generate_intersection_patterns.py
scenarios/cross/: cross.net.xml  cross.rou.xml  demand.py  eval_generated.rou.xml  eval_generated.sumocfg  map.edg.xml  map.nod.xml  sim.sumocfg  train_generated.rou.xml  train_generated.sumocfg
scenarios/cross_dynamic/: cross_turn.net.xml  eval.rou.xml  generate_pattern_library.py  sim.sumocfg  train.rou.xml
scenarios/grid2x2/: eval_generated.rou.xml  eval_generated.sumocfg  grid2x2.net.xml  grid3x3_tls.net.xml  train_generated.rou.xml  train_generated.sumocfg
scenarios/grid3x3/: eval_generated.rou.xml  eval_generated.sumocfg  grid3x3.net.xml  grid3x3.rou.xml  grid3x3.sumocfg  grid3x3.trips.xml  train_generated.sumocfg  vtypes.add.xml
scenarios/grid4x4/: eval_generated.rou.xml  eval_generated.sumocfg  generate_intersection_patterns.py  grid4x4.net.xml  train_generated.rou.xml  train_generated.sumocfg
traffic_rl/: __init__.py
traffic_rl/callbacks/: __init__.py  baseline.py  wandb_callbacks.py
traffic_rl/observations/: __init__.py  grid.py
traffic_rl/rewards/: __init__.py  functions.py
(+94 files in other folders)
