[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traffic-rl"
version = "0.1.0"
description = "Reinforcement Learning for Traffic Light Control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.2.3",
    "linear-rl>=0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "stable-baselines3>=2.7.1",
    "sumo-rl>=1.4.5",
    "tensorboard>=2.20.0",
    "torch==2.10.0+cu126",
    "wandb>=0.24.2",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
